# Diamond

./: .gitignore  CMakeLists.txt  README.md  cmakebuild.sh  cmakedebug.sh  cmakewindowsinstructs.txt  header.h  makedebug.sh  rundemos  runtests
Diamond/: Diamond.licenseheader  diamondDemo.cpp
Diamond/Launchers/: Launcher.cpp  Launcher.h  WindowsLauncher.cpp  WindowsLauncher.h
Diamond/Modules/: Graphics.cpp  Graphics.h  Log.cpp  Log.h  Logger.cpp  Logger.h  SDLGraphics.cpp  SDLGraphics.h
Game/: Game.cpp
android-project/: AndroidManifest.xml  build.xml
android-project/jni/: Application.mk
demo/: .gitignore  CMakeLists.txt  demo.cpp  diamondDemo.cpp
demo/assets/: bigfountain.cfg  credits.txt  haha_credit.txt  particles.cfg  smallfountain.cfg
demo/demos/: CollideDemo.cpp  CollideDemo.h  ParticleDemo.cpp  ParticleDemo.h  RandomDemo.cpp  RandomDemo.h  diamondDemo.cpp
demo_android-project/: .gitignore  AndroidManifest.xml  build.xml
demo_android-project/assets/: Thumbs.db
demo_android-project/jni/: Application.mk
include/: Config.h  D_AABBCollider2D.h  D_AABBColliderComponent2D.h  D_Animation2D.h  D_AnimationSheet.h  D_Animator2D.h  D_AnimatorSheet.h  D_AudioManager2D.h  D_Behavior.h  D_Benchmark.h  D_CircleCollider.h  D_CircleColliderComponent.h  D_Collider2D.h  D_ColliderComponent2D.h  D_Component.h  D_ComponentNames.h  D_Config.h  D_ConfigLoader.h  D_ConfigTable.h  D_DataCenter.h  D_DebugDrawer2D.h  D_DiskJockey2D.h  D_Engine.h  D_Engine2D.h  D_Entity.h  D_Entity2D.h  D_EntityNode2D.h  D_EventHandler.h  D_Game.h  D_Game2D.h  D_Graphics2D.h  D_Input.h  D_Launcher.h  D_Log.h  D_Music.h  D_Node2D.h  D_ParticleEngine2D.h  D_ParticleManager2D.h  D_ParticleSystem.h  D_ParticleSystem2D.h  (+32 more)
include/backend/: D_AndroidLogger.h  D_Animatronics.h  D_DesktopLogger.h  D_DiskJockey2D.h  D_EventHandler.h  D_FileLogger.h  D_Logger.h  D_QuantumAABBCollider2D.h  D_QuantumBody2D.h  D_QuantumCircleCollider.h  D_QuantumPolyCollider.h  D_QuantumPolyPoints.h  D_QuantumWorld2D.h  D_RenderObj2D.h  D_Renderer2D.h  D_SDLConfigLoader.h  D_SDLDiskJockey2D.h  D_SDLEventHandler.h  D_SDLInput.h  D_SDLMusic.h  D_SDLRenderComponent2D.h  D_SDLRenderObj2D.h  D_SDLRenderer2D.h  D_SDLSound2D.h  D_SDLTextRenderer.h  D_SDLTexture.h  D_SDLTimer.h  D_SDLtypedefs.h  D_StdConfigLoader.h  D_StreamLogger.h  D_Timer.h  DesktopLogger.h  DiskJockey2D.h  Logger.h  RenderObj2D.h  Renderer2D.h  SDLDiskJockey2D.h  SDLInput.h  SDLRenderObj2D.h  SDLRenderer2D.h  (+3 more)
include/modules/: AudioManager.h  AudioManager2D.h  Config.h  D_Animation2D.h  D_AnimationSheet.h  D_Animator.h  D_Animator2D.h  D_AnimatorComponent.h  D_AnimatorSheet.h  D_AudioManager2D.h  D_Component.h  D_Config.h  D_Entity2D.h  D_Game.h  D_GameObject2D.h  D_Graphics2D.h  D_Input.h  D_Launcher.h  D_Log.h  D_Music.h  D_RenderComponent2D.h  D_RigidbodyComponent2D.h  D_Sound2D.h  D_Texture.h  D_Time.h  D_Transform2.h  D_Transform2i.h  D_Vector2.h  D_Vector2i.h  D_World2D.h  D_typedefs.h  Game.h  GameObject2D.h  Graphics2D.h  Input.h  Launcher.h  Log.h  Sound.h  Sound2D.h  Texture.h  (+2 more)
lib/x86/: Diamond.lib
src/: Diamond.licenseheader
src/audio/: AudioManager2D.cpp  D_AudioManager2D.cpp  D_SDLDiskJockey2D.cpp  D_SDLMusic.cpp  D_SDLSound2D.cpp  SDLDiskJockey2D.cpp  SDLSound2D.cpp
src/game/: D_Engine2D.cpp  D_Entity2D.cpp  D_GameObject2D.cpp  D_Launcher.cpp  D_Node2D.cpp  D_SceneNode2D.cpp  D_Transform2.cpp  D_World2D.cpp  GameObject2D.cpp  Launcher.cpp  Transform2.cpp
src/graphics/: D_Animator.cpp  D_Animator2D.cpp  D_AnimatorComponent.cpp  D_AnimatorSheet.cpp  D_Animatronics.cpp  D_Graphics2D.cpp  D_ParticleEngine2D.cpp  D_ParticleManager2D.cpp  D_ParticleSystem.cpp  D_ParticleSystem2D.cpp  D_RenderComponent2D.cpp  D_RenderObj2D.cpp  D_SDLRenderObj2D.cpp  D_SDLRenderer2D.cpp  D_SDLTextRenderer.cpp  D_SDLTexture.cpp  D_Texture.cpp  D_UIButton.cpp  D_UIImage.cpp  D_UIStack.cpp  D_UIText.cpp  D_UIView.cpp  Graphics2D.cpp  RenderObj2D.cpp  SDLRenderObj2D.cpp  SDLRenderer2D.cpp
src/input/: D_Input.cpp  D_SDLEventHandler.cpp  D_SDLInput.cpp  SDLInput.cpp
src/launchers/: Launcher.cpp  WindowsLauncher.cpp  WindowsLauncher.h
src/modules/: Graphics.cpp  Launcher.cpp  Launcher.hpp  Log.cpp
src/physics/: D_AABBColliderComponent2D.cpp  D_CircleColliderComponent.cpp  D_ColliderComponent2D.cpp  D_QuantumWorld2D.cpp  D_RigidbodyComponent2D.cpp
src/util/: D_Benchmark.cpp  D_ConfigLeader.cpp  D_ConfigLoader.cpp  D_DebugDrawer2D.cpp  D_DesktopLogger.cpp  D_Log.cpp  D_ResourceLoader2D.cpp  D_SDLConfigLoader.cpp  (+6 more)
test/: CMakeLists.txt
test/assets/: dump.cfg  game.cfg
test/src/: DM_configTest.cpp  DM_resourceTest.cpp  DM_test.cpp
(+76 files in other folders)
